# DiskViz

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/core/: CacheManager.h  FileClassifier.h  FileScanner.h  IInstalledAppProvider.h  OllamaClassifier.h  ProgramFilesProvider.h  ScanWorker.h  SizeCalculator.h
include/ui/: MainWindow.h
include/utils/: DriveUtils.h  FormatUtils.h
src/: main.cpp
src/core/: CacheManager.cpp  FileClassifier.cpp  FileScanner.cpp  OllamaClassifier.cpp  ProgramFilesProvider.cpp  ScanWorker.cpp  SizeCalculator.cpp
src/ui/: MainWindow.cpp
src/utils/: DriveUtils.cpp  FormatUtils.cpp
tests/: CMakeLists.txt  main.cpp  test_CacheManager.cpp  test_FileClassifier.cpp  test_FormatUtils.cpp
